[package]
name = "eraft-rs"
version = "0.1.0"
authors = ["Rg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
bytes = "1.1.0"
anyhow = "1.0.53"
thiserror = "1.0.30"
getset = "0.1.2"
nom = "7.1.0"
chrono = "0.4.19"
env_logger = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }
futures = { version = "0.3.21", default-features = true }
lazy_static = "1.4.0"
async-channel = "1.6.1"
async-io = "1.6.0"
async-trait = "0.1.52"
[dev-dependencies]
maplit = "1.0.2"
env_logger = "0.9.0"
[build-dependencies]
protoc-rust = "2.27.1"

[workspace]
members = ["server"]