[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
thiserror = "1.0.30"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
eraft-rs = { path = "../../eraft-rs", version = "0.1" }
[build-dependencies]
protoc-rust = "2.27.1"